# v2

./: README.md  docker-compose.yml
app/: .gitignore  Dockerfile  components.json  db.sqlite3  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.config.ts.js
app/cloud/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/cloud/migrations/: 0002_alter_server_options_vm_create_date_vm_is_deleted_and_more.py
app/frontend/: views.py
app/frontend/static/: bundle.js  index.js  tailwind.css
app/frontend/static/js/: index.js  index.tsx
app/frontend/static/react/: App.jsx  App.tsx
app/frontend/static/react/components/: VmList.js  VmList.tsx
app/frontend/static/react/components/custom/AppSidebar/: AppSidebar.tsx
app/frontend/static/react/components/custom/ErrorBounder/: ErrorBounder.tsx
app/frontend/static/react/components/custom/Loading/: Loading.tsx
app/frontend/static/react/components/custom/ServerTablet/: AddForm.tsx  AddModal.tsx  ServerRaw.tsx  ServersTablet.tsx  hooks-and-types.ts
app/frontend/static/react/components/custom/SshKeysList/: AddForm.tsx  DeleteBtn.tsx  SshKey.tsx  SshKeysList.tsx  hooks-and-types.ts
app/frontend/static/react/components/ui/: drawer.tsx  skeleton.tsx  toast.tsx  toaster.tsx
app/frontend/static/react/const/: panel.tsx  query-client.ts
app/frontend/static/react/hooks/: get-services.ts  use-get-services.ts
app/frontend/templates/home/: index.html
app/v2interview/: settings.py  urls.py
(+19 files in other folders)
