[tool.poetry]
name = "v2-interview"
version = "0.1.0"
description = ""
authors = ["nazarkobryn <kobrinnazar05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-webpack-loader = "^3.1.1"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
